...
// limitations under the License.

import UIKit

/// Firebase Auth supported identity providers and other methods of authentication
enum AccountLinkingProvider: String, CaseIterable {
  case google = "Google"
  case apple = "Apple"
  case twitter = "Twitter"
  case microsoft = "Microsoft"
  case gitHub = "GitHub"
  case yahoo = "Yahoo"
  case facebook = "Facebook"
  case emailPassword = "Email & Password Login"
  case passwordless = "Email Link/Passwordless"
  case phoneNumber = "Phone Number"
  case anonymous = "Anonymous Authentication"
  case custom = "Custom Auth System"

  var id: String { rawValue.lowercased().appending(".com") }
...
