...
  }

  // MARK: - Private Helpers

  private func configureControllers() {
    authNavController.configureTabBar(
      title: "Authentication",
      systemImageName: "person.crop.circle.fill.badge.plus"
    )
    userNavController.configureTabBar(title: "Current User", systemImageName: "person.fill")
    tabBarController.viewControllers = [authNavController, userNavController]
  }
}

