...
                                                    <rect key="frame" x="12" y="0.0" width="96" height="96"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="96" id="Bhw-Sh-d4D"/>
                                                        <constraint firstAttribute="width" constant="96" id="UCL-i3-rgQ"/>
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EfY-Pa-M4b">
                                                    <rect key="frame" x="116" y="79" width="59.5" height="17"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <color key="textColor" white="0.0" alpha="0.54000000000000004" colorSpace="calibratedWhite"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$$" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yfl-Cs-75Y">
...
                            <constraint firstItem="7u1-C1-6cU" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="fee-CV-wxK"/>
                            <constraint firstItem="IIg-Tk-0wa" firstAttribute="top" secondItem="7u1-C1-6cU" secondAttribute="bottom" id="peV-8V-L9A"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="IIg-Tk-0wa" secondAttribute="bottom" id="xFw-yt-XAU"/>
                            <constraint firstAttribute="trailing" secondItem="IIg-Tk-0wa" secondAttribute="trailing" id="xOT-2r-EV0"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Friendly Eats" id="hCz-AK-Qxr">
                        <barButtonItem key="leftBarButtonItem" title="Populate" id="Akg-Cs-Lgo">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
                                <action selector="didTapPopulateButton:" destination="BYZ-38-t0r" id="egS-rh-MQw"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Filter" id="9eH-uy-qib">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
                                <action selector="didTapFilterButton:" destination="BYZ-38-t0r" id="zyt-7d-eFu"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                            <constraint firstItem="VtM-ag-3R6" firstAttribute="top" secondItem="kOD-16-Yc3" secondAttribute="bottom" constant="16" id="WAv-lf-8gi"/>
                            <constraint firstItem="kOD-16-Yc3" firstAttribute="leading" secondItem="pbf-4j-kVf" secondAttribute="leadingMargin" id="Wpu-gv-rLq"/>
                            <constraint firstAttribute="trailingMargin" secondItem="kOD-16-Yc3" secondAttribute="trailing" id="e6X-X4-Gas"/>
                            <constraint firstItem="kOD-16-Yc3" firstAttribute="top" secondItem="5t9-5k-wAi" secondAttribute="bottom" constant="24" id="lK7-DP-G1z"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Write a Review" id="U6b-U4-K2m">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="FBK-6I-vN9">
                            <connections>
                                <action selector="cancelButtonPressed:" destination="Zh5-BZ-GdC" id="jXm-LL-Iic"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="hcm-t8-rF5">
...
