...
    VStack {
      StarsInputView()
      TextEditor(text: $text)
        .border(Color.gray)
        .onTapGesture { if text == Constants.placeholderText { text = "" } }
        .font(.body)
      Button("Add", action: {
        addReview()
        self.showAddReviewView = false
      })
        .disabled(newReview.rating == 0 || text == Constants.placeholderText || text.isEmpty)
        .padding()
        .font(.title2)
...
