...
          selectedCity = nil
          selectedPrice = nil
          selectedSortOption = nil
        })
      }
      .navigationBarTitle("Filter", displayMode: .inline)
      .navigationBarItems(trailing: Button("Done", action: { filter() }))
    }
  }

  func filter() {
    let query = viewModel.query(category: selectedCategory, city: selectedCity,
                                price: selectedPrice, sortOption: selectedSortOption)
...
